chore: added basic global styles

--- a/src/app.css
+++ b/src/app.css
@@ -1,13 +1,12 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+.app__row {
+  display: flex;
+  margin-top: 1rem;
+  gap: 1rem;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  height: 1rem;
   will-change: filter;
 }
 .logo:hover {
