--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,16 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #0E0E11;
   font-synthesis: none;
+  width: 90vw;
+  max-width: 800px;
+  margin: auto;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  margin-bottom: 2rem;
 }
-
+i
 a {
   font-weight: 500;
   color: #646cff;
@@ -23,10 +27,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
