feat: added css vars

--- a/src/components/transactions/index.css
+++ b/src/components/transactions/index.css
@@ -1,22 +1,22 @@
 .tabs {
-    margin-top: 1rem;
+    margin-top: var(--sp-md);
 }
 
 .tabs__list {
   display: flex;
   align-items: flex-start;
-  gap: 1rem;
+  gap: var(--sp-md);
 }
 
 .avatar {
   user-select: none;
-  width: 3rem;
-  height: 3rem;
-  font-size: 1.5rem;
+  width: var(--sp-2xl);
+  height: var(--sp-2xl);
+  font-size: var(--sp-xl);
   font-weight: 600;
-  border-radius: 0.5rem;
-  border: 2px solid #88869f;
-  background-color: #0e0e11;
+  border-radius: var(--sp-sm);
+  border: 2px solid var(--light-300);
+  background-color: var(--dark-900);
   text-transform: uppercase;
   justify-content: center;
   align-items: center;
@@ -24,25 +24,25 @@
 }
 
 table {
-  background-color: #1e1e27;
-  border-radius: 0.5rem;
+  background-color: var(--dark-800);
+  border-radius: var(--sp-sm);
   width: 100%;
   text-align: left;
 }
 
 td {
-  padding: 1rem;
+  padding: var(--sp-md);
 }
 
 th {
-  color: #88869f;
-  border-bottom: 1px solid #323241;
-  padding: 1rem;
+  color: var(--light-900);
+  border-bottom: 1px solid var(--light-300);
+  padding: var(--sp-md);
   text-align: left;
 }
 
 .transaction-detail {
   display: grid;
   grid-template-columns: min-content 1fr;
-  gap: 1rem;
+  gap: var(--sp-md);
 }
