--- a/src/components/accounts/index.css
+++ b/src/components/accounts/index.css
@@ -1,17 +1,17 @@
 .accounts {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+    gap: var(--sp-md)
 }
 
 
 .account {
-    background: #14141a;
-    padding: 2rem;
+    background: var(--dark-800);
+    padding: var(--sp-lg);
     text-align: left;
 }
 
 .total {
-    color: #88869f;
+    color: var(--light-300);
 }
 
