--- a/src/components/accounts/index.css
+++ b/src/components/accounts/index.css
@@ -1,12 +1,12 @@
 .accounts {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
-  gap: var(--space-md);
+  gap: var(--spacer-medium);
 }
 
 .account {
   background: var(--dark-800);
-  padding: var(--space-lg);
+  padding: var(--spacer-large);
   text-align: left;
 }
 
