--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,17 @@
   --light-300: #88869f;
   --link: #646cff;
 
-  --space-sm: 0.5rem;
-  --space-md: 1rem;
-  --space-lg: 1.5rem;
-  --space-xl: 2rem;
-  --space-2xl: 3rem;
+  --spacer-small: 0.5rem;
+  --spacer-medium: 1rem;
+  --spacer-large: 1.5rem;
+  --spacer-xlarge: 2rem;
+  --spacer-xxlarge: 3rem;
+
+  --font-small: 0.5rem;
+  --font-medium: 1rem;
+  --font-large: 1.5rem;
+  --font-xlarge: 2rem;
+  --font-xxlarge: 3rem;
 
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -76,5 +82,5 @@ button[data-state="active"] {
 }
 
 .flow > * + * {
-  margin-top: var(--space-md);
+  margin-top: var(--spacer-medium);
 }
