--- a/src/components/accounts/index.css
+++ b/src/components/accounts/index.css
@@ -5,11 +5,11 @@
 }
 
 .account {
-  background: var(--dark-800);
+  background: var(--background-800);
   padding: var(--spacer-large);
   text-align: left;
 }
 
 .total {
-  color: var(--light-300);
+  color: var(--primary-300);
 }
