--- a/src/components/transactions/index.css
+++ b/src/components/transactions/index.css
@@ -15,8 +15,8 @@
   font-size: var(--font-xlarge);
   font-weight: 600;
   border-radius: var(--spacer-smallall);
-  border: 2px solid var(--light-300);
-  background-color: var(--dark-900);
+  border: 2px solid var(--primary-300);
+  background-color: var(--background-900);
   text-transform: uppercase;
   justify-content: center;
   align-items: center;
@@ -24,7 +24,7 @@
 }
 
 table {
-  background-color: var(--dark-800);
+  background-color: var(--background-800);
   border-radius: var(--spacer-smallall);
   width: 100%;
   text-align: left;
@@ -35,8 +35,8 @@ td {
 }
 
 th {
-  color: var(--light-900);
-  border-bottom: 1px solid var(--light-300);
+  color: var(--primary-900);
+  border-bottom: 1px solid var(--primary-300);
   padding: var(--spacer-medium);
   text-align: left;
 }
