chore: linted with stylelint

--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,19 @@
 :root {
+  /* colours */
   --background-900: #0e0e11;
   --background-800: #1e1e27;
   --primary-900: #ffffff;
   --primary-300: #88869f;
   --link: #646cff;
 
+  /* spacers */
   --spacer-small: 0.5rem;
   --spacer-medium: 1rem;
   --spacer-large: 1.5rem;
   --spacer-xlarge: 2rem;
   --spacer-xxlarge: 3rem;
 
+  /* fonts */
   --font-small: 0.5rem;
   --font-medium: 1rem;
   --font-large: 1.5rem;
@@ -30,7 +33,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
@@ -40,6 +43,7 @@ i a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: var(--link);
 }
@@ -65,13 +69,16 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: var(--link);
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
 button[data-state="active"] {
   --background-900: #d9d9d9;
   --primary-300: #000000;
